--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Detect robots and crawlers.",
     "keywords": ["crawler", "spider", "robots", "user_agent"],
     "homepage": "https://github.com/Phantazm/RobotDetector",
-    "license": "Apache 2.0",
+    "license": "MIT",
     "authors": [
         {
             "name": "Christian Johnsson",
