--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Christian Johnsson",
-            "email": "c.johnsson@wocodi.com"
+            "email": "cj@mrjohnsson.net"
         }
     ],
     "require": {
